[package]
name = "rust_async_chat"
version = "0.1.0"
authors = ["locus <spec_oops@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"

[dependencies.async-std]
version = "1"
features = ["attributes"]